--- a/rpi_cluster/component.html
+++ b/rpi_cluster/component.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <link rel="top" title="papers 0.1.0 documentation" href="../index.html" />
-    <link rel="next" title="2. Akka 分片集群水平扩展能力分析" href="benchmark.html" />
+    <link rel="next" title="2. Analysis of Scale-out Ability of Akka Sharding cluster" href="benchmark.html" />
     <link rel="prev" title="Welcome to papers’s documentation!" href="../index.html" /> 
   </head>
   <body>
@@ -35,7 +35,7 @@
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="benchmark.html" title="2. Akka 分片集群水平扩展能力分析"
+          <a href="benchmark.html" title="2. Analysis of Scale-out Ability of Akka Sharding cluster"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="../index.html" title="Welcome to papers’s documentation!"
@@ -288,7 +288,7 @@ We&#8217;ll leave 2 ports for external working network. 12 + 1x2 + 2 = 16</p>
                         title="previous chapter">Welcome to papers&#8217;s documentation!</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="benchmark.html"
-                        title="next chapter">2. Akka 分片集群水平扩展能力分析</a></p>
+                        title="next chapter">2. Analysis of Scale-out Ability of Akka Sharding cluster</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/rpi_cluster/component.txt"
@@ -318,7 +318,7 @@ We&#8217;ll leave 2 ports for external working network. 12 + 1x2 + 2 = 16</p>
           <a href="../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="benchmark.html" title="2. Akka 分片集群水平扩展能力分析"
+          <a href="benchmark.html" title="2. Analysis of Scale-out Ability of Akka Sharding cluster"
              >next</a> |</li>
         <li class="right" >
           <a href="../index.html" title="Welcome to papers’s documentation!"
